debbugage et validation des tests